# movie_recommendator

./: .dockerignore  .env.example  .gitignore  Justfile  LICENSE  README.md  docker-compose.yml  package-lock.json
.planning/: ROADMAP.md
backend/: Dockerfile  litellm_config.yaml  pyproject.toml
backend/src/app/: application.py  main.py
backend/src/app/api/v1/: api.py
backend/src/app/api/v1/endpoints/: conversations_routes.py  health.py  ws_movies.py
backend/src/app/assistants/: movie_assistant.py
backend/src/app/core/: logger.py  middleware.py  observability.py  redis.py  settings.py
backend/src/app/core/config/: logger.py  settings.py
backend/src/app/crud/: conversation_crud.py  ws_movies.py  ws_protocol.py
backend/src/app/db/: init_db.py  populate_movies_qdrant.py  session.py
backend/src/app/entities/: __init__.py  conversation_model.py  media_item_model.py  message_model.py
backend/src/app/etl/: media_dataset.py  populate_qdrant_movies.py  semantic_chunking.py
backend/src/app/prompts/: __init__.py  contextualize.py  generate.py  generate_general.py  generate_reask.py  generate_retrieve.py  router.py  summarize.py
backend/src/app/schemas/: conversation_schema.py  ws_schemas.py
backend/src/app/services/: Untitled  history_compressor.py  llm.py  qdrant_client.py  retriever.py  stream_bus.py
backend/src/app/utils/: __init__.py  text.py  type_parser.py
backend/src/app/websocket/: generation.py  handler.py  protocol.py  relay.py  session.py
backend/tests/: conftest.py  test_conversations_api.py  test_ws_movies.py
frontend/: .env.example  (+3 more)
(+22 files in other folders)
