[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.116.1",
    "polars>=1.33.1",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "sqlmodel>=0.0.25",
    "uvicorn[standard]>=0.35.0",
    "httpx>=0.28.1",
    "langchain-ollama>=1.0.1",
    "langchain>=1.2.10",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.0",
    "langgraph-checkpoint>=4.0.0",
    "qdrant-client[fastembed]>=1.15.1",
    "fastembed>=0.2.0",
    "kagglehub>=0.3.13",
    "numpy>=2.3.3",
    "tqdm>=4.67.1",
    "sentence-transformers>=5.1.0",
    "redis>=5.0",
    "structlog>=25.5.0",
    "langfuse>=3.0.0",
]


[dependency-groups]
dev = [
    "ruff>=0.13.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
